// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders active styling 1`] = `
<li
  className="c-menu__item is-active "
  data-garden-id="menus.item"
  data-garden-version="version"
/>
`;

exports[`Item renders checked styling 1`] = `
<li
  checked={true}
  className="c-menu__item is-checked "
  data-garden-id="menus.item"
  data-garden-version="version"
/>
`;

exports[`Item renders default styling 1`] = `
<li
  className="c-menu__item "
  data-garden-id="menus.item"
  data-garden-version="version"
/>
`;

exports[`Item renders disabled styling 1`] = `
<li
  className="c-menu__item is-disabled "
  data-garden-id="menus.item"
  data-garden-version="version"
  disabled={true}
/>
`;

exports[`Item renders focused styling 1`] = `
<li
  className="c-menu__item is-focused "
  data-garden-id="menus.item"
  data-garden-version="version"
/>
`;

exports[`Item renders hovered styling 1`] = `
<li
  className="c-menu__item is-hovered "
  data-garden-id="menus.item"
  data-garden-version="version"
/>
`;
